--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="./Tic Tac Toe/Index.html">Tic Tac Toe</a></li>
         <li><a href="./To-Do List/Index.html">To do List</a></li>
         <li><a href="./weather app/index.html">Weather App</a></li>
-         <li><a href="./Clipboard/Index.html">Weather App</a></li>
+         <li><a href="./Clipboard/index.html">Clipboard</a></li>
     </ul>
 </body>
 </html>
