--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <li><a href="./To-Do List/Index.html">To do List</a></li>
         <li><a href="./weather app/index.html">Weather App</a></li>
          <li><a href="./Clipboard/Clipboard.html">Clipboard</a></li>
+         <li><a href="./Google Sign In/index.html">Google Sign In</a></li>
+        <li><a href="./Dicee Challenge - Starting Files/dicee.html">Dice Challenge</a></li>
+        <li><a href="./Drum Kit Starting Files/index.html">Drum Kit Challenge</a></li>
+        <li><a href="./Simon Game Challenge Starting Files/index.html">Simon Game Challenge</a></li>
     </ul>
 </body>
 </html>
