--- a/Love Calculator/index.html
+++ b/Love Calculator/index.html
@@ -9,7 +9,7 @@
     <title>Love Calculator</title>
 </head>
 
-<body>
+<body id="particles-js">
     <div class="card">
         <h1>💖 Love Calculator 💖</h1>
         <form id="loveCalculatorForm">
@@ -30,6 +30,10 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="particles.min.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
