--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="./Dicee Challenge - Starting Files/dicee.html">Dice Challenge</a></li>
         <li><a href="./Drum Kit Starting Files/index.html">Drum Kit Challenge</a></li>
         <li><a href="./Simon Game Challenge Starting Files/index.html">Simon Game Challenge</a></li>
+        <li><a href="./Dark mode/index.html">Dark Mode</a></li>
     </ul>
 </body>
 </html>
