Tic Tac Toe game update

--- a/Games/Tic-Tac-Toe/Index.html
+++ b/Games/Tic-Tac-Toe/Index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="button.css">
-    <link rel="stylesheet" href="goku.css">
+    <link rel="stylesheet" type="text/css" href="goku.css">
     <title>Document</title>
 </head>
 
@@ -185,19 +185,24 @@
                 </div>
             </div>
 
-            <!-- Footer -->
-            <!-- <footer>
+
+        </section>
+        <!-- Footer -->
+        <footer>
+            <div class="" id="footer">
                 <ul class="social-icons">
                     <li><a href="https://github.com/Devesh-Hirwey"><ion-icon name="logo-github"></ion-icon></a></li>
-                    <li><a href="https://www.instagram.com/deveshhirwey?utm_source=qr&igsh=MXZyeHB0cjYyNHo4bA=="><ion-icon name="logo-instagram"></ion-icon></a></li>
-                    <li><a href="https://www.linkedin.com/in/devesh-hirwey-7b7341236/"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                    <li><a href="https://www.instagram.com/deveshhirwey?utm_source=qr&igsh=MXZyeHB0cjYyNHo4bA=="><ion-icon
+                                name="logo-instagram"></ion-icon></a></li>
+                    <li><a href="https://www.linkedin.com/in/devesh-hirwey-7b7341236/"><ion-icon
+                                name="logo-linkedin"></ion-icon></a></li>
                 </ul>
                 <p>&copy; Devesh hirwey</p>
                 <div>
                     <img class="wave" src="assets/footer/Wave.png" alt="">
                 </div>
-            </footer> -->
-        </section>
+            </div>
+        </footer>
     </main>
 
     <script src="main.js"></script>
