final touches to tic tac toe game for now

--- a/Games/Tic-Tac-Toe/Index.html
+++ b/Games/Tic-Tac-Toe/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="button.css">
     <link rel="stylesheet" type="text/css" href="goku.css">
-    <title>Document</title>
+    <title>Tic Tac Toe Game</title>
 </head>
 
 <body>
@@ -16,9 +16,9 @@
     <header>
         <nav id="navbar">
             <ul>
-                <li><a href="#banner">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="https://poetryincode.xyz/">Home</a></li>
+                <li><a href="../../index.html">Back</a></li>
+                <!-- <li><a href="#p">Blog(in development)</a></li> -->
             </ul>
         </nav>
     </header>
